Sudoku: :memo: Improve documentation

--- a/src/sudoku.tex
+++ b/src/sudoku.tex
@@ -35,15 +35,29 @@
 % Inhalt der Umgebung wird in JSDateiname.djs gespeichert und steht im PDF zur Verfügung
 \begin{insDLJS}[]{JSDateiname}{Sudoku}
 
+const GAME_DESC = "Sudoku is a logic-based number-placement puzzle.\
+The objective is to fill all empty spots with a digit from 1 to 9,\
+while the placements needs to follow these rules:\
+1. Each row can only contain each digit once\
+2. Each column can only contain each digit once\
+3. Each 3x3 block can only contain each digit once.";
+
 const FIELD_WIDTH = AFMakeNumber(\fieldWidth);
 const FIELD_HEIGHT = AFMakeNumber(\fieldHeight);
 const SCREEN_TEXT_WIDTH = 300;
 const NUMBERS = 9;
 
+const BOX_WIDTH = 3;
+const EMPTY = 0;
+
+% Field for current visualisation and input
 var complField = new Array();
+% The complete field with applied solution
 var solution = new Array();
+% The field containing only the initial values
 var original = new Array();
 
+% Switch if the user wants to input a sudoku
 var customMode = false;
 
 var colors = new Array(
@@ -53,8 +67,6 @@ var colors = new Array(
     [ "RGB", 0.660, 0.178, 0.233 ], % red
     [ "RGB", 0.078, 0.305, 0.560 ]
 );
-
-highlightcolor = [ "RGB", 0.984, 0.800, 0.176 ];
 
 %%%%%%%%%%
 % Helper %
@@ -84,14 +96,15 @@ function shuffle(a) {
 % Initialisation and Restart %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 function initialise() {
+    % Initlialise all arrays with a zero array
     for (var row = 0; row < FIELD_HEIGHT; row++) {
         var zArr1 = new Array();
         var zArr2 = new Array();
         var zArr3 = new Array();
         for (var column = 0; column < FIELD_WIDTH; column++) {
-            zArr1.push(0);
-            zArr2.push(0);
-            zArr3.push(0);
+            zArr1.push(EMPTY);
+            zArr2.push(EMPTY);
+            zArr3.push(EMPTY);
         }
         complField.push(zArr1);
         solution.push(zArr2);
@@ -104,6 +117,7 @@ function initialise() {
 }
 
 function initialiseButtons() {
+    % Assign each button the coresponding function and disable the highlights
     this.getField("generate").setAction("MouseUp", "generateSudoku();");
     this.getField("generate").highlight="none";
     this.getField("hint").setAction("MouseUp", "showHint();");
@@ -115,37 +129,49 @@ function initialiseButtons() {
     this.getField("reset").setAction("MouseUp", "resetSudoku();");
     this.getField("reset").highlight="none";
 
+    % Selection field for the amount of predefined fields when generating
     this.getField("elemcount").borderColor = color.white;
     this.getField("elemcount").currentValueIndices = 2;
     this.getField("elemcount").commitOnSelChange = true;
 
+    % Each field needs to be connected to an input function
+    % Define text style
     var funcName = "checkInput";
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             var callbackName = funcName + "(" + x.toString() + "," + y.toString() + ");";
-            this.getField("pos" + x + y).setAction("OnBlur", callbackName);
-            this.getField("pos" + x + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
-            this.getField("pos" + x + y).alignment = "center";
+            this.getField("pos" + x + "-" + y).setAction("OnBlur", callbackName);
+            this.getField("pos" + x + "-" + y).textSize = SCREEN_TEXT_WIDTH / FIELD_WIDTH;
+            this.getField("pos" + x + "-" + y).alignment = "center";
         }
     }
 
     this.getField("info").fillColor = color.transparent;
     this.getField("info").borderColor = color.transparent;
 
+    % Tooltip setup
     this.getField("tooltipbtn").setAction("MouseDown", "tooltip(true);");
     this.getField("tooltipbtn").setAction("MouseUp", "tooltip(false);");
     this.getField("tooltipbtn").highlight="none";
 
-    printInfoText();
+    printInfoText("Please fill the sudoku.");
 }
 
+/**
+ * Enable or disable the tooltip
+ *
+ * @param {Boolean} on Enable or disable tooltip
+ */
 function tooltip(on) {
     if (on) {
+        % Move the tooltip field to the center of the screen
+        % and adjust the size so the text can be displayed
         var field = this.getField("tooltiptxt");
         field.delay = true;
-        field.alignment = "center";
-        field.value = "This is a game.";
+        field.value = GAME_DESC;
 
+        field.multiline = true;
+        field.textSize = 16;
         field.fillColor = color.gray;
         % hight 842, width 596
         % upper-left x, upper-left y, lower-right x and lower-right y
@@ -153,10 +179,12 @@ function tooltip(on) {
 
         field.delay = false;
     } else {
+        % Remove the field such that it is not visible
         var field = this.getField("tooltiptxt");
         field.delay = true;
         field.value = "";
 
+        field.multiline = false;
         field.fillColor = color.gray;
         field.rect = [0, 0, 0, 0];
 
@@ -164,15 +192,20 @@ function tooltip(on) {
     }
 }
 
+/**
+ * Activate manual sudoku input.
+ */
 function enterSudoku() {
+    % Clear all arrays to zero
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = 0;
-            solution[y][x] = 0;
-            original[y][x] = 0;
+            complField[y][x] = EMPTY;
+            solution[y][x] = EMPTY;
+            original[y][x] = EMPTY;
         }
     }
 
+    % Save the input mode
     customMode = true;
 
     drawAll(false);
@@ -181,16 +214,29 @@ function enterSudoku() {
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 % Generation and solving %
 %%%%%%%%%%%%%%%%%%%%%%%%%%
+/**
+ * Generates a sudoku.
+ * The solution is saved inside the solution array.
+ * Inside the complField the same values can be found
+ * with some of them removed. The amount is defined by
+ * the gui element "elemcount".
+ *
+ * Algorithm:
+ * 1. Clear array
+ * 2. Fill diagonal 3x3 matrices randomly.
+ * 3. Fill rest by solving the sudoku.
+ * 4. Remove K elements randomly
+ * Source: https://www.geeksforgeeks.org/program-sudoku-generator/
+ */
 function generateSudoku() {
     customMode = false;
 
+    % Clear array
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            complField[y][x] = 0;
+            complField[y][x] = EMPTY;
         }
     }
-
-    % https://www.geeksforgeeks.org/program-sudoku-generator/
 
     % Fill all the diagonal 3x3 matrices randomly.
     var numberArray = [];
@@ -201,9 +247,9 @@ function generateSudoku() {
     % % Fill top left
     fillQuad(numberArray, 0, 0);
     % Fill middle
-    fillQuad(numberArray, 3, 3);
+    fillQuad(numberArray, BOX_WIDTH, BOX_WIDTH);
     % Fill bot right
-    fillQuad(numberArray, 6, 6);
+    fillQuad(numberArray, BOX_WIDTH * 2, BOX_WIDTH * 2);
 
     % Fill rest of the non-diagonal matrices.
     % For every cell to be filled, try all numbers until
@@ -211,6 +257,7 @@ function generateSudoku() {
     solveSudoku();
 
     % Remove K elements randomly
+    % Get all possible position combinations
     var positions = [];
     for (var x = 0; x < NUMBERS; x++) {
         for (var y = 0; y < NUMBERS; y++) {
@@ -220,12 +267,15 @@ function generateSudoku() {
     var num_elements = this.getField("elemcount").value;
     var rnd = 0;
     for (var count = NUMBERS * NUMBERS; count > num_elements; count--) {
+        % Draw and remove one random element from the positions array
         rnd = getRandomInt(positions.length);
         var elem = positions[rnd];
-        complField[elem[1]][elem[0]] = 0;
+        complField[elem[1]][elem[0]] = EMPTY;
         positions.splice(rnd, 1);
     }
 
+    % Save the current field into the original array,
+    % to allow for easy reset
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             original[y][x] = complField[y][x];
@@ -235,23 +285,41 @@ function generateSudoku() {
     drawAll(true);
 }
 
+/**
+ * Fills a 3x3 matrix with the number array that is given.
+ * The number array is shuffled inside the function to
+ * achieve randomness.
+ *
+ * @param {Array} numberArray Array of numbers to fill the quad with
+ * @param {Number} offsetX Select the x position of the quad
+ * @param {Number} offsetY Select the y position of the quad
+ */
 function fillQuad(numberArray, offsetX, offsetY) {
     shuffle(numberArray);
 
     var x = 0;
     var y = 0;
+    % Assign each number to a field
     for (var idx = 0; idx < numberArray.length; idx++) {
-        x = offsetX + idx;
-        if (idx > 5) {
-            x -= 6;
-        } else if (idx > 2) {
-            x -= 3;
-        }
-        y = offsetY + Math.floor(idx / 3);
+        % Wrap to next line - expects the lines to be 3 in length
+        x = (offsetX + idx) \% BOX_WIDTH;
+        y = offsetY + Math.floor(idx / BOX_WIDTH);
         complField[y][x] = numberArray[idx];
     }
 }
 
+/**
+ * Solve the sudoku.
+ *
+ * Algorithm:
+ * 1. Make list of all empty spaces
+ * 2. For each element in list find all candidates
+ * 3. Setup a array to save which combinations where tried
+ * 4. Iterate all spaces
+ * 4.1. Try a candidate
+ * 4.2. If field is still valid continue
+ * 4.3. Else increase iteration counter and reset spaceiterator
+ */
 function solveSudoku() {
     % Make list of all empty spaces
     var spaces = getEmptySpaces();
@@ -262,7 +330,7 @@ function solveSudoku() {
     % TODO this should not happen
     for (var idx = 0; idx < spaces.length; idx++) {
         if (candidates[idx].length == 0) {
-            printInfoText(true);
+            printInfoText("An error occurred in solveSudoku candidates.");
         }
     }
 
@@ -277,29 +345,36 @@ function solveSudoku() {
     for (var idx = 0; idx < spaces.length && apple < 500000; idx++) {
         apple++;
         complField[spaces[idx][1]][spaces[idx][0]] = candidates[idx][indices[idx]];
+
+        % When the field is not valid increase indices and reset complField and idx
         if (!isFieldValid(spaces[idx][0], spaces[idx][1])) {
 
             var tmpIdx = idx;
-
+            % For each index that is bigger than the candidates length
+            % the next cell should be increased and the last one should
+            % be reset to zero. This allows for checking all combinations
             for (; indices[tmpIdx] + 1 >= candidates[tmpIdx].length; tmpIdx--) {
                 indices[tmpIdx] = 0;
 
                 % TODO this should not happen
                 if (tmpIdx - 1 < 0) {
-                    printInfoText(true);
+                    printInfoText("An error occurred in solveSudoku comb-check.");
                     break;
                 }
             }
             indices[tmpIdx]++;
+
+            % Restart the idx counter since the solution for the spaces did not work
             idx = -1;
 
-            % Reverse if not valid solution
+            % Reverse not valid solution
             for (var idx2 = 0; idx2 < spaces.length; idx2++) {
-                complField[spaces[idx2][1]][spaces[idx2][0]] = 0;
+                complField[spaces[idx2][1]][spaces[idx2][0]] = EMPTY;
             }
         }
     }
 
+    % Save complete solution since we already generated it here
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             solution[y][x] = complField[y][x];
@@ -307,11 +382,17 @@ function solveSudoku() {
     }
 }
 
+/**
+ * Returns an array of positions ([x, y]) at which
+ * the complField contains a zero (0) and is therefore EMPTY.
+ *
+ * @return {Array} Array of empty spaces
+ */
 function getEmptySpaces() {
     var spaces = [];
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x] == 0) {
+            if (complField[y][x] == EMPTY) {
                 spaces.push([x, y]);
             }
         }
@@ -319,64 +400,84 @@ function getEmptySpaces() {
     return spaces;
 }
 
+/**
+ * Returns an array of candidates which number of 1-9 could be
+ * put at the given spaces. These are selected by consulting the
+ * typical sudoku rules.
+ *
+ * @param {Array} spaces An array of empty spots
+ * @return {Array} An array of candidates for each space
+ */
 function getCandidates(spaces) {
-    var tmp = [];
+    % Helper array to mark all numbers that are disallowed
+    var disallowed = [];
     for (var i = 0; i < 9; i++) {
-        tmp.push(true);
+        disallowed.push(true);
     }
 
     var candidates = [];
     var num = 0;
+    % Iterate all spaces that need to be filled
     for (var idx = 0; idx < spaces.length; idx++) {
-        % Check the row for all number that are set
+        % Check the row for all numbers that are set
         for (var x = 0; x < FIELD_WIDTH; x++) {
             num = complField[spaces[idx][1]][x];
-            if (num > 0) {
-                tmp[num - 1] = false;
+            if (num > EMPTY) {
+                disallowed[num - 1] = false;
             }
         }
 
-        % Check the column for all number that are set
+        % Check the column for all numbers that are set
         for (var y = 0; y < FIELD_HEIGHT; y++) {
             num = complField[y][spaces[idx][0]];
-            if (num > 0) {
-                tmp[num - 1] = false;
+            if (num > EMPTY) {
+                disallowed[num - 1] = false;
             }
         }
 
         % Check the box for all numbers that are set
-        const WIDTH = 3;
-        var xQuad = Math.floor(spaces[idx][0] / WIDTH);
-        var yQuad = Math.floor(spaces[idx][1] / WIDTH);
-        for (var x = xQuad * WIDTH; x < xQuad * WIDTH + WIDTH; x++) {
-            for (var y = yQuad * WIDTH; y < yQuad * WIDTH + WIDTH; y++) {
+        var xQuad = Math.floor(spaces[idx][0] / BOX_WIDTH);
+        var yQuad = Math.floor(spaces[idx][1] / BOX_WIDTH);
+        for (var x = xQuad * BOX_WIDTH; x < xQuad * BOX_WIDTH + BOX_WIDTH; x++) {
+            for (var y = yQuad * BOX_WIDTH; y < yQuad * BOX_WIDTH + BOX_WIDTH; y++) {
                 num = complField[y][x];
-                if (num > 0) {
-                    tmp[num - 1] = false;
+                if (num > EMPTY) {
+                    disallowed[num - 1] = false;
                 }
             }
         }
 
         % Get candidates
-        var tmp2 = [];
-        for (var i = 0; i < tmp.length; i++) {
-            if (tmp[i]) {
-                tmp2.push(i + 1);
+        var tmpCnd = [];
+        for (var i = 0; i < disallowed.length; i++) {
+            if (disallowed[i]) {
+                tmpCnd.push(i + 1);
             }
         }
-        candidates.push(tmp2);
+        candidates.push(tmpCnd);
 
-        % Reset set numbers
+        % Reset the disallowed numbers
         for (var i = 0; i < 9; i++) {
-            tmp[i] = true;
+            disallowed[i] = true;
         }
     }
     return candidates;
 }
 
+/**
+ * Checks the field at the given position
+ * if there are any conflicts with the sudoku rules
+ * given the current numbers in the field.
+ *
+ * @param {Number} valX X-coordinate of the field
+ * @param {Number} valY Y-coordinate of the field
+ * @return {Boolean} Returns true if field is valid else false.
+ */
 function isFieldValid(valX, valY) {
+    % Get the value
     var value = complField[valY][valX];
 
+    % Check all possibly conflicting fields for the same value
     % Check the row
     for (var x = 0; x < FIELD_WIDTH; x++) {
         if (complField[valY][x] == value && x != valX) {
@@ -392,11 +493,10 @@ function isFieldValid(valX, valY) {
     }
 
     % Check the box
-    const WIDTH = 3;
-    var xQuad = Math.floor(valX / WIDTH);
-    var yQuad = Math.floor(valY / WIDTH);
-    for (var x = xQuad * WIDTH; x < xQuad * WIDTH + WIDTH; x++) {
-        for (var y = yQuad * WIDTH; y < yQuad * WIDTH + WIDTH; y++) {
+    var xQuad = Math.floor(valX / BOX_WIDTH);
+    var yQuad = Math.floor(valY / BOX_WIDTH);
+    for (var x = xQuad * BOX_WIDTH; x < xQuad * BOX_WIDTH + BOX_WIDTH; x++) {
+        for (var y = yQuad * BOX_WIDTH; y < yQuad * BOX_WIDTH + BOX_WIDTH; y++) {
             if (complField[y][x] == value && (y != valY || x != valX)) {
                 return false;
             }
@@ -406,8 +506,18 @@ function isFieldValid(valX, valY) {
     return true;
 }
 
+/**
+ * Checks the given user input if it is valid.
+ * Needs to be a number betwenn 0 and 10.
+ * If the value is not allowed by the sudoku rules
+ * the field is marked red and green otherwise.
+ *
+ * @param {Number} x X-coordinate
+ * @param {Number} y Y-coordinate
+ */
 function checkInput(x, y) {
-    var field = this.getField("pos" + x + y);
+    % Get the value that was commited
+    var field = this.getField("pos" + x + "-" + y);
 
     % If the value did not change dont do anything
     if (complField[y][x] == field.value) {
@@ -415,6 +525,8 @@ function checkInput(x, y) {
     }
     field.delay = true;
 
+    % When the value is inside the bounds
+    % validate it and color the field correspondingly.
     if (field.value > 0 && field.value < 10) {
         complField[y][x] = field.value;
         if (isFieldValid(x, y)) {
@@ -422,7 +534,9 @@ function checkInput(x, y) {
         } else {
             field.fillColor = colors[3];
         }
-    } else {
+    }
+    % Else remove the value from the field
+    else {
         field.value = "";
         field.fillColor = colors[0];
     }
@@ -433,6 +547,9 @@ function checkInput(x, y) {
 %%%%%%%%%%%%%%%%%%%%%
 % Draw and coloring %
 %%%%%%%%%%%%%%%%%%%%%
+/**
+ * Resets the sudoku to the original generated one.
+ */
 function resetSudoku() {
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
@@ -442,16 +559,19 @@ function resetSudoku() {
     }
 }
 
+/**
+ * Shows one field that was not previously revealed.
+ */
 function showHint() {
-    % If one field in the solution array is zero the whole array should be
+    % If one field in the solution array is zero (EMPTY) the whole array should be
     % zero and therefore the solution was not yet generated
-    if (solution[0][0] == 0) {
+    if (solution[0][0] == EMPTY) {
         solveSudoku();
     }
 
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x] == 0) {
+            if (complField[y][x] == EMPTY) {
                 complField[y][x] = solution[y][x];
                 refreshField(x, y, colors[1]);
                 return;
@@ -460,6 +580,9 @@ function showHint() {
     }
 }
 
+/**
+ * Reveals the complete solution.
+ */
 function showSolution() {
     % When in custom mode it is not possible to know when
     % the user is done therefore the solution can only be
@@ -468,9 +591,10 @@ function showSolution() {
         solveSudoku();
     }
 
+    % Just copy all values from the solution array
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            if (complField[y][x] == 0 || customMode) {
+            if (complField[y][x] == EMPTY || customMode) {
                 complField[y][x] = solution[y][x];
                 refreshField(x, y, colors[0]);
             }
@@ -481,16 +605,16 @@ function showSolution() {
 /**
  * Refreshes value of one input field
  *
- * @param {int} x The x position.
- * @param {int} y The y position.
- * @param {RGB} color The rgb color.
+ * @param {Number} x The x position.
+ * @param {Number} y The y position.
+ * @param {Array} color The rgb color.
  *              Gray for given fields, green for correct fields,
  *              Red for wrong fields, white for empty fields.
  */
 function refreshField(x, y, color) {
-    var field = this.getField("pos" + x + y);
+    var field = this.getField("pos" + x + "-" + y);
     field.delay = true;
-    if (complField[y][x] > 0) {
+    if (complField[y][x] > EMPTY) {
         field.value = complField[y][x];
         field.fillColor = color;
     } else {
@@ -500,12 +624,17 @@ function refreshField(x, y, color) {
     field.delay = false;
 }
 
+/**
+ * ReDraw complete field, coloring can be enabled.
+ *
+ * @param {Boolean} color Should the fields be colored.
+ */
 function drawAll(color) {
     for (var x = 0; x < FIELD_WIDTH; x++) {
         for (var y = 0; y < FIELD_HEIGHT; y++) {
-            field = this.getField("pos" + x + y);
+            field = this.getField("pos" + x + "-" + y);
             field.delay = true;
-            if (complField[y][x] > 0) {
+            if (complField[y][x] > EMPTY) {
                 field.value = complField[y][x];
                 if (color) {
                     field.fillColor = colors[1];
@@ -521,12 +650,15 @@ function drawAll(color) {
     }
 }
 
-function printInfoText(error) {
+/**
+ * Print information about the game.
+ *
+ * @param {String} text Info string
+ */
+function printInfoText(text) {
     var field = this.getField("info");
     field.delay = true;
-    if (error) {
-        field.value = "ERROR";
-    }
+    field.value = text;
     field.delay = false;
 }
 
@@ -540,8 +672,10 @@ function printInfoText(error) {
 \begin{document}
 
     \begin{multicols}{2}
+        % Title
         \section*{Sudoku}
     \columnbreak
+        % Tooltip object
         \begin{flushright}%
         \PushButton[name=tooltipbtn, bordercolor=white]{%
             \begin{tcolorbox}[width=20pt, height=20pt, left=3pt, top=0pt]
@@ -568,13 +702,14 @@ function printInfoText(error) {
 
     \begin{Form}
 
+        % Playingfield
         \begin{tcolorbox}
             \begin{flushright}
                 \xintFor* #2 in {\xintSeq{0}{\fieldHeight-1}} \do {%
                     \xintFor* #1 in {\xintSeq{0}{\fieldWidth-1}} \do {%
                         \TextField[%
                             width=\blocksize, height=\blocksize,%
-                            bordercolor=white, name=pos#1#2]{}%
+                            bordercolor=white, name=pos#1-#2]{}%
                         %
                         \ifnum#1=2%
                             \vspace{1pt}%
@@ -600,7 +735,7 @@ function printInfoText(error) {
         \TextField[bordercolor=white, name=tooltiptxt, readonly=true]{}
         %
         \begin{center}%
-            \begin{tabularx}{\textwidth}{@{} X X @{}}%
+            \begin{tabularx}{\textwidth}{@{} *{2}{X} @{}}%
                 \PushButton[name=generate, bordercolor=white]{
                     \begin{tcolorbox}
                         \centering
